--- a/RVPlots.ipynb
+++ b/RVPlots.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:33729dc6b4ca73bfe74e23492a1af67eedb535bd15b9c401bbd61034670cfaa2"
+  "signature": "sha256:cfd2b993bfe1d77d5814b754f104b8d20dcd46feb20ed6066f25bf9662290e3e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -229,7 +229,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def RVs_all_stars_NPYs( sigmaClip = -1, RVClip = -1, booSave = False, booShow = True, booBaryPlot = False, title = ''):\n",
+      "def RVs_all_stars_NPYs( sigmaClip = -1, RVClip = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
       "    \n",
       "    data=np.load('data.npy')\n",
       "    RVs=np.load('RVs.npy')\n",
@@ -239,9 +239,13 @@
       "\n",
       "    X = JDs\n",
       "    Y = RVs\n",
-      "    print X,Y\n",
+      "    \n",
       "    if RVClip>-1:Y[np.abs(Y)>RVClip] = np.nan\n",
-      "#     if sigmaClip>-1:Y[np.median(Y)>RVClip] = np.nan\n",
+      "    if sigmaClip>-1:\n",
+      "        stdY= np.std(Y)\n",
+      "        medY = np.median(Y)\n",
+      "        Y[(Y>=medY-sigmaClip*stdY) & (Y<=medY+sigmaClip*stdY)] = np.nan\n",
+      "    \n",
       "    YERR = sigmas\n",
       "    \n",
       "    colors = ['b','g','r','cyan']\n",
@@ -254,19 +258,99 @@
       "#             filehandler = open(objName, 'r')\n",
       "#             thisStar = pickle.load(filehandler)\n",
       "\n",
-      "    #Plots RVs, baryvels. Single star, 4 cameras\n",
-      "    if title=='':\n",
-      "        plt.title('RV - All Stars')\n",
-      "    else:\n",
-      "        plt.title(title)\n",
       "        \n",
-      "    if booBaryPlot==True: plt.plot(X, -baryVels, label = 'Barycentric Vel. ')\n",
       "    \n",
-      "    for i in range(Y.shape[0])[:]:\n",
-      "        for cam in range(4)[:1]:\n",
+      "    for cam in range(4)[:]:\n",
+      "        for i in range(Y.shape[0])[:]:\n",
+      "            #Plots RVs, baryvels. Single star, 4 cameras\n",
+      "            if title=='':\n",
+      "                plt.title('RV - All Stars - '+labels[cam]+' camera')\n",
+      "            else:\n",
+      "                plt.title(title)\n",
+      "            \n",
+      "\n",
       "#             plt.errorbar(X, Y[i,:,cam], yerr=YERR[i,:,cam], fmt='.', label = labels[cam], color = colors[cam])\n",
       "            plt.scatter(X, Y[i,:,cam], label = labels[cam], color = colors[cam])\n",
       "    \n",
+      "    #sine plot\n",
+      "#     start_day = 56889.000000 # The Julian date for CE  2014 August 20 00:00:00.0 UT  (10am australia)\n",
+      "#     end_day = 56895.000000 #The Julian date for CE  2014 August 26 00:00:00.0 UT (10am australia)\n",
+      "#     days = np.linspace(start_day, end_day) \n",
+      "#     K1=26100\n",
+      "#     peri_time = 19298.85\n",
+      "#     P=4.8202\n",
+      "#     peri_arg=269.3\n",
+      "#     RV = K1* np.sin( (days-peri_time)/P*2*np.pi - peri_arg/360*2*np.pi )\n",
+      "#     plt.plot(days, RV, linewidth = 1, label = 'rhoTuc' )\n",
+      "\n",
+      "        if booBaryPlot==True: plt.plot(X, baryVels, label = 'Barycentric Vel. ')\n",
+      "\n",
+      "        plt.xlabel('MJD')\n",
+      "        plt.ylabel('RV [m/s]')\n",
+      "    #     plt.legend(loc=0)\n",
+      "        if booSave==True: \n",
+      "            try:\n",
+      "                plotName = 'plots/All_RVs_'+labels[cam]\n",
+      "                print 'Attempting to save', plotName, \n",
+      "                plt.savefig(plotName, dpi = 1000 )\n",
+      "\n",
+      "            except:\n",
+      "                print 'FAILED'\n",
+      "        if booShow==True: plt.show()\n",
+      "        plt.close()\n",
+      "                \n",
+      "        "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def RVs_by_star_NPYs(sigmaClip = -1, RVClip = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
+      "    \n",
+      "    data=np.load('data.npy')\n",
+      "    RVs=np.load('RVs.npy')\n",
+      "    sigmas=np.load('sigmas.npy')\n",
+      "    baryVels=np.load('baryVels.npy')\n",
+      "    JDs=np.load('JDs.npy')\n",
+      "\n",
+      "    X = range(data[:,0].shape[0])\n",
+      "    Y = RVs\n",
+      "    Y[Y==0]=np.nan\n",
+      "    \n",
+      "    if RVClip>-1:Y[np.abs(Y)>RVClip] = np.nan\n",
+      "    if sigmaClip>-1:\n",
+      "        stdY= np.std(Y)\n",
+      "        medY = np.median(Y)\n",
+      "        Y[(Y>=medY-sigmaClip*stdY) & (Y<=medY+sigmaClip*stdY)] = np.nan\n",
+      "    \n",
+      "    YERR = sigmas\n",
+      "    \n",
+      "    colors = ['b','g','r','cyan']\n",
+      "    labels = ['Blue','Green','Red','IR']\n",
+      "    \n",
+      "    #Plots RVs, baryvels. all star, 4 cameras\n",
+      "    print 'About to plot RVs from ',RVs.shape[0],'stars.'\n",
+      "    fig, ax = plt.subplots()\n",
+      "    if title=='':\n",
+      "        plt.title('RVs per star')\n",
+      "    else:\n",
+      "        plt.title(title)\n",
+      "\n",
+      "    ax.set_xticklabels(data[:,0])\n",
+      "    plt.xticks(rotation=70)\n",
+      "\n",
+      "    if booBaryPlot==True: plt.plot(X, baryVels, label = 'Barycentric Vel. ')\n",
+      "    \n",
+      "    for epoch in range(Y.shape[1])[:]:\n",
+      "        for cam in range(4)[:1]:\n",
+      "#             plt.errorbar(X, Y[i,:,cam], yerr=YERR[i,:,cam], fmt='.', label = labels[cam], color = colors[cam])\n",
+      "            plt.scatter(X, Y[:,epoch,cam], label = labels[cam], color = colors[cam])\n",
+      "    \n",
+      "\n",
       "    #sine plot\n",
       "#     start_day = 56889.000000 # The Julian date for CE  2014 August 20 00:00:00.0 UT  (10am australia)\n",
       "#     end_day = 56895.000000 #The Julian date for CE  2014 August 26 00:00:00.0 UT (10am australia)\n",
