--- a/create_obj.ipynb
+++ b/create_obj.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f636a04570af914b817f420036f288347dcb9f144986f22f52cd255a078a3548"
+  "signature": "sha256:7c04168c2398aad8c8a4762d6d7a36bd134d203b574f6e0bc9db276498daf629"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -44,17 +44,17 @@
       "#         stetson_df = pandas.read_pickle('stetson.pd')\n",
       "        files = glob.glob('cam1/*.fits')\n",
       "        for thisFile in files:\n",
-      "            a = pf.open(thisFile)\n",
-      "            b = a['FIBRES'].data\n",
-      "            idx = b.field('NAME').strip()==name\n",
-      "            if b[idx].shape[0] >0:\n",
-      "                starInfo = b[idx][0]\n",
+      "            thisFits = pf.open(thisFile)\n",
+      "            fibreTable = thisFits['FIBRES'].data\n",
+      "            idx = fibreTable.field('NAME').strip()==name\n",
+      "            if fibreTable[idx].shape[0] >0: #if there is any star in this file...\n",
+      "                starInfo = fibreTable[idx][0] \n",
       "\n",
       "                self.name = starInfo.field('NAME').strip()\n",
-      "                self.RA_dec = starInfo.field('RA')\n",
+      "                self.RA_dec = np.rad2deg(starInfo.field('RA'))\n",
       "                self.Dec_dec = starInfo.field('DEC')        \n",
-      "                self.RA_h, self.RA_min, self.RA_sec = toolbox.dec2sex(self.RA_dec/15)   \n",
-      "                self.Dec_deg, self.Dec_min, self.Dec_sec = toolbox.dec2sex(self.Dec_dec)\n",
+      "                self.RA_h, self.RA_min, self.RA_sec = toolbox.dec2sex(np.rad2deg(self.RA_dec)/15)   \n",
+      "                self.Dec_deg, self.Dec_min, self.Dec_sec = toolbox.dec2sex(np.rad2deg(self.Dec_dec))\n",
       "                self.Vmag = starInfo.field('MAGNITUDE')\n",
       "            \n",
       "#                 self.B = stetson_df[stetson_df.target == self.name].B.values[0]\n",
@@ -238,7 +238,7 @@
       "            vh, vb = toolbox.baryvel(j+2400000+0.5) \n",
       "            ra = star.RA_dec    #RA  in radians\n",
       "            dec = star.Dec_dec  #Dec in radians\n",
-      "            baryVels.append(-(vb[0]*np.cos(dec)*np.cos(ra) + vb[1]*np.cos(dec)*np.sin(ra) + vb[2]*np.sin(dec))*1000)\n",
+      "            baryVels.append((vb[0]*np.cos(dec)*np.cos(ra) + vb[1]*np.cos(dec)*np.sin(ra) + vb[2]*np.sin(dec))*1000)\n",
       "#         print baryVels\n",
       "        self.rel_baryVels = np.array(baryVels) - baryVels[0]\n",
       "        self.abs_baryVels = np.array(baryVels)\n",
