--- a/random_tests.ipynb
+++ b/random_tests.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0b75f53c1e813d309dedda8366307ba1e6bcc18b9ae7f3a016a4f5615a2bfa3f"
+  "signature": "sha256:cf02a6333a70e86c7ab77a553bf6d95f9891f544cc366481deec9110ef54b818"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -814,25 +814,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "cd ~/Documents/HERMES/reductions/HD1581_6.2/"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "/Users/Carlos/Documents/HERMES/reductions/HD1581_6.2\n"
-       ]
-      }
-     ],
-     "prompt_number": 231
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
       "cd ~/Documents/HERMES/reductions/47Tuc_core_6.2/"
      ],
      "language": "python",
@@ -847,21 +828,6 @@
       }
      ],
      "prompt_number": 61
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# filename = 'Giant01.obj'\n",
-      "# filename = 'Brght01.obj'\n",
-      "filename = 'red_Giant01.obj'\n",
-      "filehandler = open(filename, 'r')\n",
-      "thisStar = pickle.load(filehandler)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 232
     },
     {
      "cell_type": "code",
@@ -894,17 +860,6 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 235
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "thisCam = thisStar.exposures.cameras[3]\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 239
     },
     {
      "cell_type": "code",
@@ -1276,18 +1231,38 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from scipy import stats"
+      "PyAstronomy"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 217
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "<module 'PyAstronomy' from '/Users/Carlos/Library/Enthought/Canopy_64bit/User/lib/python2.7/site-packages/PyAstronomy/__init__.pyc'>"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print np.sqrt(stats.nanmedian(thisCam.red_fluxes[i]))\n"
+      "import PyAstronomy"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cd ~/Documents/HERMES/reductions/HD1581_6.2/"
      ],
      "language": "python",
      "metadata": {},
@@ -1296,11 +1271,403 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "23.8838187503\n"
+        "/Users/Carlos/Documents/HERMES/reductions/HD1581_6.2\n"
        ]
       }
      ],
-     "prompt_number": 218
+     "prompt_number": 63
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import pickle\n",
+      "filename = 'HD1581.obj'\n",
+      "# filename = 'Brght01.obj'\n",
+      "# filename = 'red_Giant01.obj'\n",
+      "filehandler = open(filename, 'r')\n",
+      "thisStar = pickle.load(filehandler)\n",
+      "thisCam = thisStar.exposures.cameras[3]\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 122
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "array([ 2456890.31 ,  2456891.304,  2456891.306,  2456891.308,\n",
+        "        2456892.206,  2456892.208,  2456892.21 ,  2456894.264,\n",
+        "        2456894.266,  2456894.268,  2456894.269,  2456894.271,\n",
+        "        2456895.242,  2456895.244,  2456895.246])"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from PyAstronomy import pyasl\n",
+      "\n",
+      "def baryTest(thisStar):\n",
+      "\n",
+      "    for i,jd in enumerate((thisStar.exposures.JDs+2400000.5)[:]):\n",
+      "        heli, bary = pyasl.baryvel(jd, deq=2000.0)\n",
+      "#         print \"Earth's velocity at JD: \", jd\n",
+      "#         print \"Heliocentric velocity [km/s]: \", heli\n",
+      "#         print \"Barycentric velocity [km/s] : \", bary\n",
+      "\n",
+      "        # Coordinates of Sirius\n",
+      "        ra  = 101.28715535\n",
+      "        dec = -16.71611587\n",
+      "        \n",
+      "        #thisStar coords\n",
+      "        ra  = np.rad2deg(thisStar.RA_dec)\n",
+      "        dec = np.rad2deg(thisStar.Dec_dec)\n",
+      "        print np.rad2deg(thisStar.RA_dec), np.rad2deg(thisStar.Dec_dec), thisStar.name, thisStar.exposures.abs_baryVels[i]\n",
+      "\n",
+      "        \n",
+      "        vh, vb = pyasl.baryCorr(jd, ra, dec, deq=2000.0)\n",
+      "        print \"Barycentric velocity of Earth toward\",thisStar.name,'[m/s]', vb*1000\n",
+      "        print vb*1000-thisStar.exposures.abs_baryVels[i]\n",
+      "        print ''"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 123
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\n",
+      "baryTest(thisStar)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "5.02704166667 -64.8685 HD1581 -1635.49740613\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -1579.62900978\n",
+        "55.8683963486\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -1900.73128351\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -1844.94437413\n",
+        "55.7869093816\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -1901.26474098\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -1845.47801237\n",
+        "55.7867286118\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -1901.79819758\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -1846.01164981\n",
+        "55.7865477743\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -2141.20645726\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -2085.50794687\n",
+        "55.6985103937\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -2141.73937822\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -2086.04107916\n",
+        "55.6982990645\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -2142.27229768\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -2086.57421001\n",
+        "55.6980876674\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -2688.6923747\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -2633.24727971\n",
+        "55.4450949923\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -2689.2234094\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -2633.77859573\n",
+        "55.4448136682\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -2689.75444193\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -2634.30990965\n",
+        "55.4445322759\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -2690.01995721\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -2634.57556566\n",
+        "55.4443915543\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -2690.55098631\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -2635.10687625\n",
+        "55.4441100599\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -2948.07750859\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -2892.7781043\n",
+        "55.2994042901\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -2948.6073146\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -2893.30822492\n",
+        "55.29908968\n",
+        "\n",
+        "5.02704166667 -64.8685 HD1581 -2949.13711789\n",
+        "Barycentric velocity of Earth toward HD1581 [m/s] -2893.83834289\n",
+        "55.2987750018\n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 124
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "Right ascension\t00h 20m 04.25995s\n",
+      "Declination\t\u221264\u00b0 52\u2032 29.2549\u2033"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print thisStar.RA_dec, thisStar.Dec_dec#, thisStar.RA_h, thisStar.RA_min , thisStar.RA_sec\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.185324877741 -1.14263312432\n"
+       ]
+      }
+     ],
+     "prompt_number": 43
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import toolbox\n",
+      "toolbox.dec2sex(thisStar.RA_dec)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 49,
+       "text": [
+        "(0.0, 11.0, 7.1695598673523619)"
+       ]
+      }
+     ],
+     "prompt_number": 49
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import numpy as np"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 51
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "thisStar.RA_dec, toolbox.dec2sex(np.rad2deg(thisStar.RA_dec)/15)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 56,
+       "text": [
+        "(0.1853248777409312, (0.0, 42.0, 28.39999999999975))"
+       ]
+      }
+     ],
+     "prompt_number": 56
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "00 20 06.49 -64 52 06.6\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "SyntaxError",
+       "evalue": "invalid syntax (<ipython-input-57-81649f279bfe>, line 1)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-57-81649f279bfe>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    00 20 06.49 -64 52 06.6\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+       ]
+      }
+     ],
+     "prompt_number": 57
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "np.deg2rad(toolbox.sex2dec(0,20,06.49)*15)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 60,
+       "text": [
+        "0.087738428718276612"
+       ]
+      }
+     ],
+     "prompt_number": 60
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "np.deg2rad(-toolbox.sex2dec(64,52,6.6))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 80,
+       "text": [
+        "-1.1321689058299416"
+       ]
+      }
+     ],
+     "prompt_number": 80
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "-toolbox.sex2dec(64,52,6.6)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 79,
+       "text": [
+        "-64.8685"
+       ]
+      }
+     ],
+     "prompt_number": 79
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "RVs = np.random.random(100)\n",
+      "stdRV= np.std(RVs)\n",
+      "medRV = 0.5\n",
+      "sigmaClip = 0.1\n",
+      "print RVs,stdRV,medRV\n",
+      "print RVs[(RVs>=medRV-sigmaClip*stdRV) & (RVs<=medRV+sigmaClip*stdRV)]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[ 0.50944729  0.59202363  0.34793192  0.49857096  0.11168045  0.5402587\n",
+        "  0.1639193   0.63398657  0.11826589  0.83046053  0.21378317  0.89126498\n",
+        "  0.38665419  0.43266515  0.31866077  0.18833401  0.66504509  0.12992092\n",
+        "  0.7296709   0.93295998  0.15362989  0.79720843  0.94320636  0.98437832\n",
+        "  0.51896116  0.98229951  0.04638261  0.89583847  0.41585421  0.40722681\n",
+        "  0.1096208   0.99106994  0.97524987  0.56994879  0.51063583  0.35349014\n",
+        "  0.51254062  0.33487206  0.41287229  0.72653006  0.15814849  0.05696768\n",
+        "  0.26069769  0.5933787   0.49401713  0.85210524  0.40962797  0.68764811\n",
+        "  0.54484472  0.60963499  0.33765635  0.99509764  0.47090397  0.23627487\n",
+        "  0.32071665  0.21991094  0.06261571  0.74229276  0.42339483  0.65616199\n",
+        "  0.14606433  0.54493962  0.86816375  0.17595697  0.16485671  0.11700399\n",
+        "  0.5580427   0.60210596  0.02294881  0.37644091  0.7811683   0.10981021\n",
+        "  0.72287168  0.80615526  0.190554    0.64533609  0.93021578  0.6138838\n",
+        "  0.64106467  0.11551869  0.74450757  0.88140708  0.86976513  0.38413611\n",
+        "  0.50847321  0.40583771  0.09499961  0.59455717  0.82802101  0.8511119\n",
+        "  0.62215665  0.35489146  0.98100454  0.35250727  0.23062261  0.67021778\n",
+        "  0.20447119  0.70156444  0.29592984  0.45394288] 0.277557430083 0.5\n",
+        "[ 0.50944729  0.49857096  0.51896116  0.51063583  0.51254062  0.49401713\n",
+        "  0.50847321]\n"
+       ]
+      }
+     ],
+     "prompt_number": 149
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import pylab as plt\n",
+      "names = a"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 152
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "g = plt.gca()\n",
+      "g.xaxis.majorTic\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 155
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import matplotlib.pyplot as plt\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 162
     },
     {
      "cell_type": "code",
