--- a/reduce_2dfdr.ipynb
+++ b/reduce_2dfdr.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fa169c7bbcc0d5978f4c62ee2d629085ada9928c2092c1d7a40c1a30b8f44cd0"
+  "signature": "sha256:35d0e890b9533e961a72fd220be234db4937c26ecd19d6722e34d6d3b8791cbb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -126,6 +126,10 @@
       "            self.file_ix = self.ix_array[self.startFrom]\n",
       "            self.create_file_list(self.startFrom)\n",
       "\n",
+      "            print time.strftime('%X %x %Z'),'   Copying flats and arcs to subsequent data sets'\n",
+      "            sys.stdout.flush()\n",
+      "            self.copy_flat_arc()\n",
+      "            \n",
       "            if self.doReduce==True:\n",
       "                print time.strftime('%X %x %Z'),'  Reducing master frame', self.filename_prfx[self.startFrom]\n",
       "                sys.stdout.flush()\n",
@@ -136,9 +140,10 @@
       "                print time.strftime('%X %x %Z'),'Reduction flag turned off. All done.'\n",
       "            \n",
       "            #replace flats and arcs for datasets>0\n",
-      "            print time.strftime('%X %x %Z'),'   Copying reduced flats and arcs to subsequent data sets'\n",
-      "            sys.stdout.flush()\n",
-      "            self.copy_flat_arc()\n",
+      "#             print time.strftime('%X %x %Z'),'   Copying reduced flats and arcs to subsequent data sets'\n",
+      "#             sys.stdout.flush()\n",
+      "#             self.copy_flat_arc(booIncludeReduced=True)\n",
+      "\n",
       "\n",
       "            no_masters = range(len(self.filename_prfx))\n",
       "            no_masters.remove(int(self.startFrom))\n",
@@ -356,7 +361,7 @@
       "    \n",
       "    \n",
       "\n",
-      "    def copy_flat_arc(self):     \n",
+      "    def copy_flat_arc(self, booIncludeReduced = False):     \n",
       "        \n",
       "        #crates the list of source files fro dataset=0\n",
       "        self.target_dir = self.target_root + str(self.startFrom) + '_'+ self.filename_prfx[self.startFrom] +'/'\n",
@@ -365,14 +370,16 @@
       "        src_list = []\n",
       "        for cam,j in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
       "            src_list.append(self.target_dir + str(cam+1) + '/' +j[0])\n",
-      "            src_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'ex.fits')\n",
-      "            src_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'im.fits')\n",
-      "            src_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'red.fits')\n",
-      "            src_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'tlm.fits')\n",
+      "            if booIncludeReduced==True:\n",
+      "                src_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'ex.fits')\n",
+      "                src_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'im.fits')\n",
+      "                src_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'red.fits')\n",
+      "                src_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'tlm.fits')\n",
       "            src_list.append(self.target_dir + str(cam+1) + '/' +j[1])\n",
-      "            src_list.append(self.target_dir + str(cam+1) + '/' +j[1][:-5] + 'ex.fits')\n",
-      "            src_list.append(self.target_dir + str(cam+1) + '/' +j[1][:-5] + 'im.fits')\n",
-      "            src_list.append(self.target_dir + str(cam+1) + '/' +j[1][:-5] + 'red.fits')\n",
+      "            if booIncludeReduced==True:\n",
+      "                src_list.append(self.target_dir + str(cam+1) + '/' +j[1][:-5] + 'ex.fits')\n",
+      "                src_list.append(self.target_dir + str(cam+1) + '/' +j[1][:-5] + 'im.fits')\n",
+      "                src_list.append(self.target_dir + str(cam+1) + '/' +j[1][:-5] + 'red.fits')\n",
       "        \n",
       "        #for all datasets>0 create target_list and copy src_list to target_list\n",
       "        no_masters = range(len(self.ix_array))\n",
@@ -384,14 +391,16 @@
       "            target_list = []\n",
       "            for cam,j in enumerate([self.files1, self.files2, self.files3, self.files4]):\n",
       "                target_list.append(self.target_dir + str(cam+1) + '/' +j[0])\n",
-      "                target_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'ex.fits')\n",
-      "                target_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'im.fits')\n",
-      "                target_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'red.fits')\n",
-      "                target_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'tlm.fits')\n",
+      "                if booIncludeReduced==True:\n",
+      "                    target_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'ex.fits')\n",
+      "                    target_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'im.fits')\n",
+      "                    target_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'red.fits')\n",
+      "                    target_list.append(self.target_dir + str(cam+1) + '/' +j[0][:-5] + 'tlm.fits')\n",
       "                target_list.append(self.target_dir + str(cam+1) + '/' +j[1])\n",
-      "                target_list.append(self.target_dir + str(cam+1) + '/' +j[1][:-5] + 'ex.fits')\n",
-      "                target_list.append(self.target_dir + str(cam+1) + '/' +j[1][:-5] + 'im.fits')\n",
-      "                target_list.append(self.target_dir + str(cam+1) + '/' +j[1][:-5] + 'red.fits')\n",
+      "                if booIncludeReduced==True:\n",
+      "                    target_list.append(self.target_dir + str(cam+1) + '/' +j[1][:-5] + 'ex.fits')\n",
+      "                    target_list.append(self.target_dir + str(cam+1) + '/' +j[1][:-5] + 'im.fits')\n",
+      "                    target_list.append(self.target_dir + str(cam+1) + '/' +j[1][:-5] + 'red.fits')\n",
       "            \n",
       "            #copy this set\n",
       "            for src,tgt in zip(src_list, target_list):\n",
@@ -481,8 +490,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 16
+     "outputs": []
     }
    ],
    "metadata": {}
