--- a/RVTools.ipynb
+++ b/RVTools.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:cc1db0f1a01929e1d2505e6af8b6486145f4c1bb2db34583301dac8871d9d865"
+  "signature": "sha256:98860ece9e03604f696b3291abbd01ed17e19583fe7a5d6b10ab92be1db775c3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -294,6 +294,47 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Create cross correlation curves wrt epoch 0\n",
+      "def single_RVs_CC_t0(thisStar, cam = 0, t = 0, corrHWidth =10):\n",
+      "\n",
+      "        print 'Camera',cam, '- t0 wrt t',t\n",
+      "        \n",
+      "        thisCam = thisStar.exposures.cameras[cam]\n",
+      "            \n",
+      "            \n",
+      "        lambda1, flux1 = clean_flux(thisCam.wavelengths[0], thisCam.red_fluxes[0], thisCam)\n",
+      "        \n",
+      "        lambda2, flux2 = clean_flux(thisCam.wavelengths[t], thisCam.red_fluxes[t], thisCam)\n",
+      "        CCCurve = []\n",
+      "        CCCurve = signal.fftconvolve(flux1[-np.isnan(flux1)], flux2[-np.isnan(flux2)][::-1], mode='same')\n",
+      "        corrMax = np.where(CCCurve==max(CCCurve))[0][0]\n",
+      "        p_guess = [corrMax,corrHWidth]\n",
+      "        x_mask = np.arange(corrMax-corrHWidth, corrMax+corrHWidth+1)\n",
+      "        if max(x_mask)<len(CCCurve):\n",
+      "            p = fit_gaussian(p_guess, CCCurve[x_mask], np.arange(len(CCCurve))[x_mask])[0]\n",
+      "            if np.modf(CCCurve.shape[0]/2.0)[0]>1e-5:\n",
+      "                pixelShift = (p[0]-(CCCurve.shape[0]-1)/2.) #odd number of elements\n",
+      "            else:\n",
+      "                pixelShift = (p[0]-(CCCurve.shape[0])/2.) #even number of elements\n",
+      "\n",
+      "\n",
+      "            mid_px = thisCam.wavelengths.shape[1]/2\n",
+      "            dWl = (thisCam.wavelengths[t,mid_px+1]-thisCam.wavelengths[t,mid_px]) / thisCam.wavelengths[t,mid_px]\n",
+      "            RV = dWl * pixelShift * constants.c \n",
+      "            print 'RV',RV\n",
+      "        else:\n",
+      "            p=RV=0\n",
+      "        return lambda1,flux1, lambda2,flux2, CCCurve, p, x_mask, RV \n",
+      "        \n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
